--- a/Lab/static/css/style.css
+++ b/Lab/static/css/style.css
@@ -38,6 +38,11 @@
     border-radius: 30px;
     padding: 15px 20px;
 }
+.btn1
+{
+    border-radius: 0px;
+    padding: 6px 11px;
+}
 .frstbtn
 {
     padding-left: 30px;
