--- a/Lab/templates/base.html
+++ b/Lab/templates/base.html
@@ -45,10 +45,10 @@
                         </div>
                     </div>
                     <div class="col-lg-3   ">
-                        <a href="#firstform" class="btn btn-warning ">BOOK AN APPOINTMENT</a>
+                        <a href="#firstform" class="btn1 btn btn-warning ">BOOK AN APPOINTMENT</a>
                     </div>
-                    <div class="col-lg-3">
-                        <a href="#" class="btn btn-success">LOCATE ON MAP</a>
+                    <div class="col-lg-3 ">
+                        <a href="#" class="btn btn1 btn-success">LOCATE ON MAP</a>
                     </div>
                     <div class="col-lg-3">
                         <input type="search">
